# tityos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.sh
examples/tensor_basics/: CMakeLists.txt  main.cpp
src/: BaseTensor.hpp  ByteArray.hpp  Dtype.hpp  ShapeStrides.hpp  StridedDataAccessor.hpp
tests/: CMakeLists.txt  test_example.cpp
tests/performance/: benchmark_ops.cpp
tests/performance/core/: benchmark_ops.cpp
tests/performance/cuda/: benchmark_ops.cpp
tests/unit/: test_BaseTensor.cpp  test_ByteArray.cpp  test_Ops.cpp  test_ShapeStrides.cpp  test_StridedDataAccessor.cpp  test_Tensor.cpp  test_TensorStorage.cpp
tests/unit/core/: test_BaseTensor.cpp  test_Gradients.cpp  test_LogicalOps.cpp  test_Ops.cpp  test_ShapeStrides.cpp  test_Tensor.cpp  test_TensorStorage.cpp
tests/unit/cuda/: test_Ops.cpp  test_Tensor.cpp  test_TensorStorage.cpp
tityos/ty/: CMakeLists.txt  Device.h  export.h
tityos/ty/backend/: Backend.cpp  Backend.h  CMakeLists.txt  CPUBackend.cpp  CPUBackend.h  CUDABackend.cpp  CUDABackend.h
tityos/ty/cuda/: cuda_import.h  cuda_utils.h
tityos/ty/grad/: GradientContext.h
tityos/ty/ops/: CMakeLists.txt  CudaTensorView.h  TensorView.h  add.cpp  add.h  bmm.cpp  bmm.h  contiguous.cpp  contiguous.h  defines.h  dispatchDType.h  empty.cpp  empty.h  expand.cpp  expand.h  reshape.cpp  reshape.h  toCpu.cpp  toCpu.h  utils.cpp  utils.h
tityos/ty/ops/core/: add.h
tityos/ty/ops/cpu/: CMakeLists.txt  TensorView.h  add.cpp  add.h  bmm.cpp  bmm.h  contiguous.cpp  contiguous.h  toCpu.cpp  toCpu.h
tityos/ty/ops/cpu/avx/: add.cpp  add.h  avxTraits.h  bmm.cpp  bmm.h
tityos/ty/ops/cpu/avx2/: add.cpp  add.h  avx2Traits.h  bmm.cpp  bmm.h
tityos/ty/ops/cuda/: CMakeLists.txt  CudaTensorView.h  add.cpp  add.cu  add.h  bmm.cpp  bmm.cu  bmm.h  contiguous.cpp  contiguous.cu  contiguous.h  toCpu.cpp  toCpu.h
tityos/ty/tensor/: BaseTensor.cpp  BaseTensor.h  ByteArray.cpp  ByteArray.h  CMakeLists.txt  Device.h  Dtype.h  Index.h  Indexing.cpp  Indexing.h  ShapeStrides.cpp  ShapeStrides.h  Slice.h  StridedDataAccessor.cpp  StridedDataAccessor.h  Tensor.cpp  Tensor.h  TensorIterator.h  TensorStorage.cpp  TensorStorage.h
tityos/ty/tensor/cpu/: TensorStorage.cpp  TensorStorage.h
tityos/ty/tensor/cuda/: TensorStorage.cpp  TensorStorage.h
